--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/crypto-js": "^4.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "crypto-hash": "^2.0.1",
     "crypto-js": "^4.1.1",
     "lodash": "^4.17.21",
     "near-api-js": "^2.1.4",
